<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.viewpager.widget.PagerTabStrip
            android:id="@+id/pagerTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.viewpager.widget.ViewPager>

</LinearLayout>