<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidEx</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_material_tab">MaterialTabActivity</string>
    <string name="title_activity_custom_tabs">CustomTabsActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_my_recyclerview">MyRecyclerviewActivity</string>

...
